--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,1 @@
-{% extends 'layout.html' %}{% block content %}<h2>Sign in</h2><form method='post'><label>Username</label><input name='username' autofocus><label>Password</label><input name='password' type='password'><button>Sign in</button></form><p class='small'>Ask owner/manager for credentials.</p>{% endblock %}
+{% extends 'layout.html' %}{% block content %}<form method='post'><input name='username'><input name='password' type='password'><button>Login</button></form>{% endblock %}
