--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,5 @@
-{% extends 'layout.html' %}{% block content %}<h2>Dashboard</h2>{% endblock %}
+{% extends 'layout.html' %}
+{% block content %}
+  <h2>Dashboard</h2>
+  <p>Use the links above to manage Inventory, Batches, and Menu.</p>
+{% endblock %}
